@@ -1,0 +1,3 @@
+26f9c402de811b0434b09aa1a2e5eee3 *./tests/data/lavf/lavf.ircam
+91136 ./tests/data/lavf/lavf.ircam
+./tests/data/lavf/lavf.ircam CRC=0xf1ae5536
